# ros_ws

./: README.md
install/: local_setup.sh  setup.sh
install/sim_alpha_description/share/sim_alpha_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sim_bringup/share/sim_bringup/: package.bash  package.sh  package.zsh
install/sim_model/lib/sim_model/: real2Sim_dynamics  real2Sim_kinematics
install/sim_model/share/sim_model/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sim_msgs/share/sim_msgs/: package.bash  package.sh  package.zsh
src/reinforcement_dynamics_control_alpha5-main/: .gitignore  README.md  check_model.py  de_main.py  environment.py  gym_environment.py  inquiry.py  main.py  pid_control.py  test.py  train.py  traj_environment.py  utils.py
src/reinforcement_dynamics_control_alpha5-main/others/: dynamics.ipynb  reach_alpha_arm.urdf
src/reinforcement_dynamics_control_alpha5-main/sim_alpha_description/: CMakeLists.txt  package.xml
src/reinforcement_dynamics_control_alpha5-main/sim_alpha_description/casadi/: fk.casadi  qddot.casadi
src/reinforcement_dynamics_control_alpha5-main/sim_bringup/: CMakeLists.txt  package.xml
src/reinforcement_dynamics_control_alpha5-main/sim_model/: package.xml  setup.cfg  setup.py
src/reinforcement_dynamics_control_alpha5-main/sim_msgs/: CMakeLists.txt  package.xml
src/reinforcement_dynamics_control_alpha5-main/sim_msgs/msg/: Filter.msg  JointDisturbance.msg  SimInput.msg
(+256 files in other folders)
